// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippets > examples > 'GET /metadata (allow-multiple)' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.service.getmetadata({
        shallow: false,
        tag: [
            "development",
            "public",
        ],
        apiVersion: "0.0.1",
    });
}
main();
"
`;

exports[`snippets > examples > 'GET /metadata (simple)' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.service.getmetadata({
        shallow: false,
        tag: [
            "development",
        ],
        apiVersion: "0.0.1",
    });
}
main();
"
`;

exports[`snippets > examples > 'POST /big-entity (simple)' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.service.createbigentity({
        castMember: {
            id: "john.doe",
            name: "John Doe",
        },
        extendedMovie: {
            cast: [
                "John Travolta",
                "Samuel L. Jackson",
                "Uma Thurman",
                "Bruce Willis",
            ],
            id: "movie-sda231x",
            title: "Pulp Fiction",
            from: "Quentin Tarantino",
            rating: 8.5,
            type: "movie",
            tag: "tag-12efs9dv",
            metadata: {
                "academyAward": true,
                "releaseDate": "2023-12-08",
                "ratings": {
                    rottenTomatoes: 97,
                    imdb: 7.6,
                },
            },
            revenue: BigInt("1000000"),
        },
        eventInfo: {
            type: "metadata",
            id: "event-12345",
            data: {
                "key1": "val1",
                "key2": "val2",
            },
            jsonString: "abc",
        },
        migration: {
            name: "Migration 31 Aug",
            status: "RUNNING",
        },
    });
}
main();
"
`;

exports[`snippets > examples > 'POST /movie (invalid request body)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "title"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets > examples > 'POST /movie (simple)' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.service.createmovie({
        id: "movie-c06a4ad7",
        prequel: "movie-cv9b914f",
        title: "The Boy and the Heron",
        from: "Hayao Miyazaki",
        rating: 8,
        type: "movie",
        tag: "development",
        metadata: {
            "actors": [
                "Christian Bale",
                "Florence Pugh",
                "Willem Dafoe",
            ],
            "releaseDate": "2023-12-08",
            "ratings": {
                rottenTomatoes: 97,
                imdb: 7.6,
            },
        },
        revenue: BigInt("1000000"),
    });
}
main();
"
`;

exports[`snippets > exhaustive > 'GET /object/get-and-return-with-optio…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "bigint"
    ],
    "message": "Expected number, got string"
  }
]"
`;

exports[`snippets > exhaustive > 'POST /container/list-of-objects (inva…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[0]",
      "string"
    ],
    "message": "Expected string, got boolean"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[1]",
      "invalid"
    ],
    "message": "\\"invalid\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[2]",
      "string"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets > exhaustive > 'POST /container/list-of-objects (simp…' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.endpointsContainer.endpointsContainerGetAndReturnListOfObjects([
        {
            string: "one",
        },
        {
            string: "two",
        },
        {
            string: "three",
        },
    ]);
}
main();
"
`;

exports[`snippets > exhaustive > 'POST /container/list-of-primitives (s…' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.endpointsContainer.endpointsContainerGetAndReturnListOfPrimitives([
        "one",
        "two",
        "three",
    ]);
}
main();
"
`;

exports[`snippets > exhaustive > 'POST /container/map-prim-to-union (mi…' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.endpointsContainer.endpointsContainerGetAndReturnMapOfPrimToUndiscriminatedUnion({
        "test": 0,
        "test2": true,
        "test3": "Test",
        "test4": [
            "1",
            "1",
            "1",
            "1",
        ],
    });
}
main();
"
`;

exports[`snippets > file-upload > 'POST /' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody"
    ],
    "message": "Expected file value to be a string, got object"
  }
]"
`;

exports[`snippets > file-upload > 'POST /just-file' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient();
    await client.service.justfile({
        file: new Blob(["Hello, world!"]),
    });
}
main();
"
`;

exports[`snippets > file-upload > 'POST /just-file-with-query-params' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient();
    await client.service.justfilewithqueryparams({
        integer: 42,
        maybeString: "exists",
        file: new Blob(["Hello, world!"]),
    });
}
main();
"
`;

exports[`snippets > imdb > 'GET /movies/{movieId} (simple)' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.imdb.getmovie({
        movieID: "movie_xyz",
    });
}
main();
"
`;

exports[`snippets > imdb > 'POST /movies/create-movie (simple)' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
    });
    await client.imdb.createmovie({
        title: "The Matrix",
        rating: 8.2,
    });
}
main();
"
`;

exports[`snippets > multi-url-environment > 'Custom environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Multiple environments are not supported for single base URL environments; use the baseUrl option instead"
  }
]"
`;

exports[`snippets > multi-url-environment > 'Invalid multi url environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Multiple environments are not supported for single base URL environments; use the baseUrl option instead"
  }
]"
`;

exports[`snippets > multi-url-environment > 'Production environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Production\\" was not found"
  }
]"
`;

exports[`snippets > multi-url-environment > 'Staging environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Staging\\" was not found"
  }
]"
`;

exports[`snippets > multi-url-environment > 'Unrecognized environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;

exports[`snippets > nullable > 'Body properties' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        environment: "https://api.example.com",
    });
    await client.nullable.createuser({
        username: "john.doe",
        tags: [
            "admin",
        ],
        metadata: {
            createdAt: new Date("1980-01-01T00:00:00Z"),
            updatedAt: new Date("1980-01-01T00:00:00Z"),
            avatar: null,
            activated: null,
        },
        avatar: null,
    });
}
main();
"
`;

exports[`snippets > nullable > 'Invalid null value' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody"
    ],
    "message": "Expected non-null value, but got null"
  }
]"
`;

exports[`snippets > nullable > 'Query parameters' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        environment: "https://api.example.com",
    });
    await client.nullable.getusers({
        usernames: [
            "john.doe",
            "jane.doe",
        ],
        tags: [
            null,
        ],
        extra: null,
    });
}
main();
"
`;

exports[`snippets > read-write-only > 'Body properties' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        environment: "https://api.example.com",
    });
    await client.createUser({
        password: "password",
        profile: {
            name: "name",
            verification: {},
            ssn: "ssn",
        },
    });
}
main();
"
`;

exports[`snippets > read-write-only > 'Readonly value in request' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "id"
    ],
    "message": "\\"id\\" is not a recognized parameter for this endpoint"
  }
]"
`;

exports[`snippets > required-headers > 'GET /plants (simple)' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
        tenantId: "my-tenant-id",
    });
    await client.plantstore.list();
}
main();
"
`;

exports[`snippets > required-headers > 'POST /plants (simple)' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        token: "<YOUR_API_KEY>",
        tenantId: "my-tenant-id",
    });
    await client.plantstore.create({
        name: "Fern",
        price: 12.99,
    });
}
main();
"
`;

exports[`snippets > single-url-environment-default > 'Production environment' 1`] = `
"import { AcmeClient, AcmeEnvironment } from "acme";

async function main() {
    const client = new AcmeClient({
        environment: AcmeEnvironment.Production,
        token: "<YOUR_API_KEY>",
    });
    await client.dummy.getdummy();
}
main();
"
`;

exports[`snippets > single-url-environment-default > 'Staging environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Staging\\" was not found"
  }
]"
`;

exports[`snippets > single-url-environment-default > 'custom baseURL' 1`] = `
"import { AcmeClient } from "acme";

async function main() {
    const client = new AcmeClient({
        environment: "http://localhost:8080",
        token: "<YOUR_API_KEY>",
    });
    await client.dummy.getdummy();
}
main();
"
`;

exports[`snippets > single-url-environment-default > 'invalid baseURL and environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Cannot specify both baseUrl and environment options"
  }
]"
`;

exports[`snippets > single-url-environment-default > 'invalid environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;
